--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>XCTL Tools</title>
-    <meta http-equiv="refresh" content="0; url=scribble_generator.html">
+    <meta http-equiv="refresh" content="0; url=tools/scribble_generator.html">
     <style>
         body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
         a { color: #0066cc; text-decoration: none; }
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h1>XCTL Tools</h1>
-    <p><a href="tool/scribble_generator.html">Scribble Generator</a></p>
+    <p><a href="tools/scribble_generator.html">Scribble Generator</a></p>
 </body>
 </html>
